force-app/main/default/objects/SFL5_Projects__c/SFL5_Projects__c.object-meta.xml
<CustomObject>
    <compactLayoutAssignment
  >Project_Research_Compact_Layout</compactLayoutAssignment>
    <description
  >Projects are related to Accounts and optionally an opportunity.  The percent complete is based on the project checklist using a custom formula field.  Using workflow, it is suggested to create standard tasks based on the project stage field.  Calendar events can be scheduled to book consultants time.  Since outlook and salesforce.com integrate bidirectionally, it helps schedule internal and external resources.  

Time and expenses can also be tracked to projects.  
Documents like SOW&apos;s, progress reports, etc can be attached to projects.</description>
    <label>Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>