force-app/main/default/objects/SFL5_Projects__c/fields/Account_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Account_Analyst__c</fullName>
    <formula
  >Client__r.Name &amp; &quot; | &quot; &amp;  Client__r.Navigator_Analyst__r.FirstName &amp; &quot; &quot; &amp;  Client__r.Navigator_Analyst__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account &amp; Analyst</label>
    <type>Text</type>
</CustomField>