force-app/main/default/objects/SFL5_Projects__c/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <formula>Client__r.Id</formula>
    <label>Account ID</label>
    <type>Text</type>
</CustomField>