force-app/main/default/objects/SFL5_Projects__c/fields/Ad_Name__c.field-meta.xml
<CustomField>
    <fullName>Ad_Name__c</fullName>
    <description
  >Name of the ad as it will appear in DART for web creative</description>
    <inlineHelpText
  >Naming convention is adsize_date (ie 300x250_120101). Can be same as creative name.</inlineHelpText>
    <label>Ad Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>