force-app/main/default/objects/SFL5_Projects__c/fields/Add_Moderator_Speaker_Calendar_Hold__c.field-meta.xml
<CustomField>
    <fullName>Add_Moderator_Speaker_Calendar_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mod &amp; Speaker Added to Calendar Hold</label>
    <type>Checkbox</type>
</CustomField>