force-app/main/default/objects/SFL5_Projects__c/fields/Added_to_Offers_Queue__c.field-meta.xml
<CustomField>
    <fullName>Added_to_Offers_Queue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Added to Offers Queue</label>
    <type>Checkbox</type>
</CustomField>