force-app/main/default/objects/SFL5_Projects__c/fields/Additional_Editor_Changes_Needed__c.field-meta.xml
<CustomField>
    <fullName>Additional_Editor_Changes_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Editor Changes Needed</label>
    <type>Checkbox</type>
</CustomField>