force-app/main/default/objects/SFL5_Projects__c/fields/Additional_POC__c.field-meta.xml
<CustomField>
    <fullName>Additional_POC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Additional internal POC on this project to be included on email alerts (any user from sales, content studio, research, etc that need to be on alerts).</description>
    <inlineHelpText
  >Additional internal POC on this project to be included on email alerts (any user from sales, content studio, research, etc that need to be on alerts).</inlineHelpText>
    <label>Additional POC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects7</relationshipName>
    <type>Lookup</type>
</CustomField>