force-app/main/default/objects/SFL5_Projects__c/fields/Billing__c.field-meta.xml
<CustomField>
    <fullName>Billing__c</fullName>
    <label>Billing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Bid Project</fullName>
            </value>
            <value>
                <fullName>Time &amp; Materials</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>