force-app/main/default/objects/SFL5_Projects__c/fields/Business_Model__c.field-meta.xml
<CustomField>
    <fullName>Business_Model__c</fullName>
    <label>Project Charter</label>
    <type>TextArea</type>
</CustomField>