force-app/main/default/objects/SFL5_Projects__c/fields/Business_Objective__c.field-meta.xml
<CustomField>
    <fullName>Business_Objective__c</fullName>
    <description
  >This value is populated via Process Builder from the Contract.</description>
    <label>Business Objective</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>