force-app/main/default/objects/SFL5_Projects__c/fields/Call_to_Action_Text__c.field-meta.xml
<CustomField>
    <fullName>Call_to_Action_Text__c</fullName>
    <label>Call to Action Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>