force-app/main/default/objects/SFL5_Projects__c/fields/Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name__c</fullName>
    <description>Campaign name from a web contract</description>
    <inlineHelpText
  >Use campaign name from the IO or default to the current year (ie 2012)</inlineHelpText>
    <label>Campaign Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>