force-app/main/default/objects/SFL5_Projects__c/fields/Candidate_Writer_Offer__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Writer_Offer__c</fullName>
    <formula
  >HYPERLINK(&quot;https://erepublic2.sharepoint.com/:w:/t/CustomMedia/EX3ysveLOcRJniK4HKJtZY0B-hrCJY93sZoVxe64vy4B_w?e=fVGkOa&amp;wdLOR=c64B0C50F-96BD-42ED-8788-C2EB122FDAE5&quot;,&quot;Sample Writer Request Email&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate Writer Offer</label>
    <type>Text</type>
</CustomField>