force-app/main/default/objects/SFL5_Projects__c/fields/Case_Insensitive_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_Insensitive_Project_ID__c</fullName>
    <formula>CASESAFEID( Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case-Insensitive Project ID</label>
    <type>Text</type>
</CustomField>