force-app/main/default/objects/SFL5_Projects__c/fields/Case_Study_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Study_Type__c</fullName>
    <label>Case Study Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CDE</fullName>
            </value>
            <value>
                <fullName>GT</fullName>
            </value>
            <value>
                <fullName>GOV</fullName>
            </value>
            <value>
                <fullName>PCIO</fullName>
            </value>
            <value>
                <fullName>EM</fullName>
            </value>
            <value>
                <fullName>PDF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>