force-app/main/default/objects/SFL5_Projects__c/fields/Center_Research_Percent_Complete__c.field-meta.xml
<CustomField>
    <fullName>Center_Research_Percent_Complete__c</fullName>
    <description>Center Research Percent Completed - Custom entry</description>
    <label>Center Research Percent Complete</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>