force-app/main/default/objects/SFL5_Projects__c/fields/checkbox1__c.field-meta.xml
<CustomField>
    <fullName>checkbox1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Initial Plan</label>
    <type>Checkbox</type>
</CustomField>