force-app/main/default/objects/SFL5_Projects__c/fields/checkbox3__c.field-meta.xml
<CustomField>
    <fullName>checkbox3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Plan Defined</label>
    <type>Checkbox</type>
</CustomField>