force-app/main/default/objects/SFL5_Projects__c/fields/Client_Accepted_Digital_Mailing_List__c.field-meta.xml
<CustomField>
    <fullName>Client_Accepted_Digital_Mailing_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Accepted Digital Mailing List</label>
    <type>Checkbox</type>
</CustomField>