force-app/main/default/objects/SFL5_Projects__c/fields/Client_Accepted_Sample_Mailing_List__c.field-meta.xml
<CustomField>
    <fullName>Client_Accepted_Sample_Mailing_List__c</fullName>
    <label>Client Accepted Sample Mailing List</label>
    <type>Date</type>
</CustomField>