force-app/main/default/objects/SFL5_Projects__c/fields/Client_Approved_Design__c.field-meta.xml
<CustomField>
    <fullName>Client_Approved_Design__c</fullName>
    <label>Client Approved Design</label>
    <type>Date</type>
</CustomField>