force-app/main/default/objects/SFL5_Projects__c/fields/Client_Approved_Draft__c.field-meta.xml
<CustomField>
    <fullName>Client_Approved_Draft__c</fullName>
    <label>Client Approved Draft</label>
    <type>Date</type>
</CustomField>