force-app/main/default/objects/SFL5_Projects__c/fields/Client_Approved_Outline__c.field-meta.xml
<CustomField>
    <fullName>Client_Approved_Outline__c</fullName>
    <label>Client Approved Outline</label>
    <type>Date</type>
</CustomField>