force-app/main/default/objects/SFL5_Projects__c/fields/Client_Approved_Panel_Questions__c.field-meta.xml
<CustomField>
    <fullName>Client_Approved_Panel_Questions__c</fullName>
    <label>Client Approved Panel Questions</label>
    <type>Date</type>
</CustomField>