force-app/main/default/objects/SFL5_Projects__c/fields/Client_Custom_Opt_Out_Text__c.field-meta.xml
<CustomField>
    <fullName>Client_Custom_Opt_Out_Text__c</fullName>
    <formula
  >IF(Client__r.Has_Client_Custom_Opt_Out__c , &quot;Required - See Account&quot;, &quot;N/A&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >If this displays &quot;Required&quot;, go to the Account record and copy text from field &quot;Client Custom Opt-Out Text&quot;. This is a client&apos;s custom opt-out text they require us to put on our forms.</inlineHelpText>
    <label>Client Custom Opt-Out Text</label>
    <type>Text</type>
</CustomField>