force-app/main/default/objects/SFL5_Projects__c/fields/Client_Description__c.field-meta.xml
<CustomField>
    <fullName>Client_Description__c</fullName>
    <label>Client Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>