force-app/main/default/objects/SFL5_Projects__c/fields/Client_Design_Approval_Request__c.field-meta.xml
<CustomField>
    <fullName>Client_Design_Approval_Request__c</fullName>
    <formula
  >HYPERLINK(&quot;https://erepublic2.sharepoint.com/:w:/t/CustomMedia/EQKOgQi6nKlCg_tsQ8r5DfYBm-HUWCF9xdsSmqdevLWleA?e=H9qDxf&amp;wdLOR=cCAA0CADE-E262-45A6-A593-E2975588A2BA&quot;,&quot;Sample Client Designed PDF Review&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Design Approval Request</label>
    <type>Text</type>
</CustomField>