force-app/main/default/objects/SFL5_Projects__c/fields/Client_Draft_Review_Request__c.field-meta.xml
<CustomField>
    <fullName>Client_Draft_Review_Request__c</fullName>
    <formula
  >HYPERLINK(&quot;https://erepublic2.sharepoint.com/:w:/t/CustomMedia/ES2TblqJNTBNhrpf6FwlZroBwgm3j-cQ94vYNCGr_DWiXA?e=5gt5NL&amp;wdLOR=c48957471-2B39-4ABB-A531-B91B92ED3E63&quot;,&quot;Sample Client Draft Review Email&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Draft Review Request</label>
    <type>Text</type>
</CustomField>