force-app/main/default/objects/SFL5_Projects__c/fields/Client_Logo_Description_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Client_Logo_Description_Reminder__c</fullName>
    <formula>&quot;Ask client for logo and description if needed&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Logo/Description Reminder</label>
    <type>Text</type>
</CustomField>