force-app/main/default/objects/SFL5_Projects__c/fields/Client_Logo_Needed__c.field-meta.xml
<CustomField>
    <fullName>Client_Logo_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Logo Needed</label>
    <type>Checkbox</type>
</CustomField>