force-app/main/default/objects/SFL5_Projects__c/fields/Client_Main_Contact__c.field-meta.xml
<CustomField>
    <fullName>Client_Main_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >The main contact at the client that is our contact for the project.</description>
    <inlineHelpText
  >The main contact at the client that is our contact for the project.</inlineHelpText>
    <label>Client Main Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>