force-app/main/default/objects/SFL5_Projects__c/fields/Client_Materials_Folder__c.field-meta.xml
<CustomField>
    <fullName>Client_Materials_Folder__c</fullName>
    <label>Client Materials Folder</label>
    <type>Url</type>
</CustomField>