force-app/main/default/objects/SFL5_Projects__c/fields/Client_Outline_Review_Request__c.field-meta.xml
<CustomField>
    <fullName>Client_Outline_Review_Request__c</fullName>
    <formula
  >HYPERLINK(&quot;https://erepublic2.sharepoint.com/:w:/t/CustomMedia/EaAZTSGBq6lJv321ZOWhhrIB4Qa3HFDWFTpimQg4hvXDNw?e=GMoJdw&amp;wdLOR=c708E9F3B-D74C-43AE-886B-B87F7C19A981&quot;,&quot;Sample Client Outline Review Email&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Outline Review Request</label>
    <type>Text</type>
</CustomField>