force-app/main/default/objects/SFL5_Projects__c/fields/Client_Panelists_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Client_Panelists_Confirmed__c</fullName>
    <label>Client Panelists Confirmed</label>
    <type>Date</type>
</CustomField>