force-app/main/default/objects/SFL5_Projects__c/fields/Client_Phone__c.field-meta.xml
<CustomField>
    <fullName>Client_Phone__c</fullName>
    <formula>Client_Main_Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Phone</label>
    <type>Text</type>
</CustomField>