force-app/main/default/objects/SFL5_Projects__c/fields/Client_Project_Contact__c.field-meta.xml
<CustomField>
    <fullName>Client_Project_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Formerly &quot;Client Project Contact&quot; whose values were transferred to &quot;Client Main Contact&quot;. Repurposed as a secondary main contact field.</description>
    <inlineHelpText
  >Additional main contact at the client that is our contact for the project.</inlineHelpText>
    <label>Client Main Contact (2)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projects (Client Project Contact)</relationshipLabel>
    <relationshipName>Projects2</relationshipName>
    <type>Lookup</type>
</CustomField>