force-app/main/default/objects/SFL5_Projects__c/fields/Client_Sponsor_Link_Review__c.field-meta.xml
<CustomField>
    <fullName>Client_Sponsor_Link_Review__c</fullName>
    <formula
  >HYPERLINK(&quot;https://erepublic2.sharepoint.com/:w:/r/teams/CustomMedia/Shared%20Documents/CSM%20RESOURCES/Content%20Studio%20Guidelines/Sample%20Email%20Templates/Webinars/Sample%20Email_Client%20Sponsor%20Link%20Review.docx?d=we19d8c918f4941d8998525e36d3ab3a2&amp;csf=1&amp;web=1&amp;e=xCEYZz&quot;,&quot;Client Sponsor Link Review&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Sponsor Link Review</label>
    <type>Text</type>
</CustomField>