force-app/main/default/objects/SFL5_Projects__c/fields/Client_Testimonial__c.field-meta.xml
<CustomField>
    <fullName>Client_Testimonial__c</fullName>
    <description
  >Optional field for delivery to enter positive feedback from client if acquired</description>
    <inlineHelpText
  >Optional field for delivery to enter positive feedback from client if acquired</inlineHelpText>
    <label>Client Testimonial</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>