force-app/main/default/objects/SFL5_Projects__c/fields/Client_Title__c.field-meta.xml
<CustomField>
    <fullName>Client_Title__c</fullName>
    <formula>Client_Main_Contact__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Title</label>
    <type>Text</type>
</CustomField>