force-app/main/default/objects/SFL5_Projects__c/fields/Client_Wishlist__c.field-meta.xml
<CustomField>
    <fullName>Client_Wishlist__c</fullName>
    <label>Client Wishlist</label>
    <type>Url</type>
</CustomField>