force-app/main/default/objects/SFL5_Projects__c/fields/Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date__c</fullName>
    <description
  >The date that the project is expected to complete or was actually completed.</description>
    <inlineHelpText
  >The date that the project is expected to complete or was actually completed.</inlineHelpText>
    <label>Completion Date (or ETA)</label>
    <type>Date</type>
</CustomField>