force-app/main/default/objects/SFL5_Projects__c/fields/Concierge_Client__c.field-meta.xml
<CustomField>
    <fullName>Concierge_Client__c</fullName>
    <formula>Client__r.Concierge_Client_Formula__c  = TRUE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Customer Success Management (CSM) client</inlineHelpText>
    <label>CSM Client</label>
    <type>Checkbox</type>
</CustomField>