force-app/main/default/objects/SFL5_Projects__c/fields/Concierge_POC__c.field-meta.xml
<CustomField>
    <fullName>Concierge_POC__c</fullName>
    <formula
  >Client__r.Concierge_1__r.FirstName &amp; &quot; &quot; &amp;  Client__r.Concierge_1__r.LastName</formula>
    <inlineHelpText>Customer Success Management (CSM) POC</inlineHelpText>
    <label>CSM POC</label>
    <type>Text</type>
</CustomField>