force-app/main/default/objects/SFL5_Projects__c/fields/Content_to_be_Posted_Send_to_Web__c.field-meta.xml
<CustomField>
    <fullName>Content_to_be_Posted_Send_to_Web__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText
  >When checked, an email is sent to Web. System automatically unchecks this box to allow email alerts to send upon being checked again.</inlineHelpText>
    <label>Content to be Posted - Send to Web</label>
    <type>Checkbox</type>
</CustomField>