force-app/main/default/objects/SFL5_Projects__c/fields/Contract_Integrated__c.field-meta.xml
<CustomField>
    <fullName>Contract_Integrated__c</fullName>
    <formula>AND(
INCLUDES(Contract__r.Delivery_Team__c, &quot;Research&quot;),
INCLUDES(Contract__r.Delivery_Team__c, &quot;Content Studio&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Integrated</label>
    <type>Checkbox</type>
</CustomField>