force-app/main/default/objects/SFL5_Projects__c/fields/Contractor_Costs__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Costs__c</fullName>
    <label>Contrator Costs</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>