force-app/main/default/objects/SFL5_Projects__c/fields/Contractor_Markup__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Markup__c</fullName>
    <label>Contractor Markup %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>