force-app/main/default/objects/SFL5_Projects__c/fields/Contractor_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Multiplier__c</fullName>
    <formula>Contractor_Markup__c  + 1</formula>
    <label>Contractor Multiplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>