force-app/main/default/objects/SFL5_Projects__c/fields/Create_Calendar_Hold_for_Date__c.field-meta.xml
<CustomField>
    <fullName>Create_Calendar_Hold_for_Date__c</fullName>
    <label>Calendar Hold for Event Sent</label>
    <type>Date</type>
</CustomField>