force-app/main/default/objects/SFL5_Projects__c/fields/Created_Moderator_Panelist_Login_Links__c.field-meta.xml
<CustomField>
    <fullName>Created_Moderator_Panelist_Login_Links__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created Moderator &amp; Panelist Login Links</label>
    <type>Checkbox</type>
</CustomField>