force-app/main/default/objects/SFL5_Projects__c/fields/Creative_Name__c.field-meta.xml
<CustomField>
    <fullName>Creative_Name__c</fullName>
    <description>Name of the web graphic in DART</description>
    <inlineHelpText
  >Naming convention is adsize_date (ie 300x250_120101). Can be same as creative name.</inlineHelpText>
    <label>Creative Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>