force-app/main/default/objects/SFL5_Projects__c/fields/CSM_1_Email__c.field-meta.xml
<CustomField>
    <fullName>CSM_1_Email__c</fullName>
    <description
  >Hidden field used to contain the email address of the CSM 1 user specified on the account.</description>
    <inlineHelpText
  >Hidden field used to contain the email address of the CSM 1 user specified on the account.</inlineHelpText>
    <label>CSM 1 Email</label>
    <type>Email</type>
</CustomField>