force-app/main/default/objects/SFL5_Projects__c/fields/Custom_ROI__c.field-meta.xml
<CustomField>
    <fullName>Custom_ROI__c</fullName>
    <description
  >*See list of required products* As requested delivery can provide a custom ROI statement (e.g. ROI unique to this membership)</description>
    <inlineHelpText
  >*See list of required products* As requested delivery can provide a custom ROI statement (e.g. ROI unique to this membership)</inlineHelpText>
    <label>Custom ROI</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>