force-app/main/default/objects/SFL5_Projects__c/fields/Date_Metrics_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Metrics_Sent__c</fullName>
    <description
  >This is the date the metrics for this campaign were sent to the client.</description>
    <inlineHelpText
  >The most recent date metrics were sent to the distribution list. Update the date every time new metrics are sent.</inlineHelpText>
    <label>Date Metrics Sent</label>
    <type>Date</type>
</CustomField>