force-app/main/default/objects/SFL5_Projects__c/fields/Deliverables_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Deliverables_Marketing__c</fullName>
    <description
  >This is a multi-select list of deliverables that will result from this marketing project.</description>
    <inlineHelpText
  >This is a multi-select list of deliverables that will result from this marketing project.</inlineHelpText>
    <label>Deliverables</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>API Integration</fullName>
            </value>
            <value>
                <fullName>Automatic Program</fullName>
            </value>
            <value>
                <fullName>Brochure</fullName>
            </value>
            <value>
                <fullName>Campaign Outline</fullName>
            </value>
            <value>
                <fullName>Data Sheet</fullName>
            </value>
            <value>
                <fullName>Documentation/Hat</fullName>
            </value>
            <value>
                <fullName>Door Opener</fullName>
            </value>
            <value>
                <fullName>Email(s)</fullName>
            </value>
            <value>
                <fullName>Form</fullName>
            </value>
            <value>
                <fullName>Landing Page</fullName>
            </value>
            <value>
                <fullName>Marketing Calendar</fullName>
            </value>
            <value>
                <fullName>Media Kit</fullName>
            </value>
            <value>
                <fullName>Plan/Report</fullName>
            </value>
            <value>
                <fullName>Policy</fullName>
            </value>
            <value>
                <fullName>PowerPoint</fullName>
            </value>
            <value>
                <fullName>Print Ad(s)</fullName>
            </value>
            <value>
                <fullName>Process</fullName>
            </value>
            <value>
                <fullName>Project Scope</fullName>
            </value>
            <value>
                <fullName>Research Data</fullName>
            </value>
            <value>
                <fullName>Signage/Booth Materials</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Swag</fullName>
            </value>
            <value>
                <fullName>System</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Web Ad(s)</fullName>
            </value>
            <value>
                <fullName>Web Content</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>