force-app/main/default/objects/SFL5_Projects__c/fields/Delivery_Category__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Category__c</fullName>
    <description
  >Indicates which category this project falls under for reporting delivery revenue.</description>
    <inlineHelpText
  >Indicates which category this project falls under for reporting delivery revenue.</inlineHelpText>
    <label>Delivery Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Converge Special Report Q1 2013</fullName>
            </value>
            <value>
                <fullName>Converge Special Report Q2 2013</fullName>
            </value>
            <value>
                <fullName>Converge Special Report Q3 2013</fullName>
            </value>
            <value>
                <fullName>Converge Special Report Q4 2013</fullName>
            </value>
            <value>
                <fullName>Education Lead Gen Surveys</fullName>
            </value>
            <value>
                <fullName>Education Whitepaper/Custom Media</fullName>
            </value>
            <value>
                <fullName>EM Mag Custom Media</fullName>
            </value>
            <value>
                <fullName>GOVERNING</fullName>
            </value>
            <value>
                <fullName>GT Lead Gen Surveys</fullName>
            </value>
            <value>
                <fullName>HHS Special Report 2013</fullName>
            </value>
            <value>
                <fullName>Public CIO Q3 2013 Special Report</fullName>
            </value>
            <value>
                <fullName>Whitepaper/GT Custom Pub Income</fullName>
            </value>
            <value>
                <fullName>Public CIO Q1 2013 Special Report</fullName>
            </value>
            <value>
                <fullName>Public CIO Q2 2013 Special Report</fullName>
            </value>
            <value>
                <fullName>Public CIO Q4 2013 Special Report</fullName>
            </value>
            <value>
                <fullName>Custom Video</fullName>
            </value>
            <value>
                <fullName>GovGirl Video</fullName>
            </value>
            <value>
                <fullName>Marketing Video</fullName>
            </value>
            <value>
                <fullName>Editorial Video</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>