force-app/main/default/objects/SFL5_Projects__c/fields/Delivery_Intel__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Intel__c</fullName>
    <label>Delivery Intel</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>