force-app/main/default/objects/SFL5_Projects__c/fields/Delivery_Status_Notes__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Status_Notes__c</fullName>
    <description
  >For delivery to add notes regarding any delays, issues or updates to the delivery timeline</description>
    <inlineHelpText
  >For delivery to add notes regarding any delays, issues or updates to the delivery timeline</inlineHelpText>
    <label>Delivery Status Notes</label>
    <type>TextArea</type>
</CustomField>